# app-ipi

./: CAN_send_data.ino  CMakeLists.txt  README.md  can-setup.sh  supervisord.conf  test  test.sh  test_suepervisord.cpp  vsomeip.json
Commonapi/fidl/: status.fdepl  status.fidl
Head_Unit/: CMakeLists.txt
Head_Unit/src/: GearSelectionServer.cpp
Piracer_Sender/Battery/: CMakeLists.txt
Piracer_Sender/Battery/src/: BatteryServer.cpp  BatteryStubImpl.cpp  BatteryStubImpl.hpp  main.cpp
Piracer_Sender/Gamepad/: CMakeLists.txt
Piracer_Sender/Gamepad/src/: .Gamepad.cpp.swp  GearSelectionClient.cpp  GearSelectionClient.hpp  main.cpp
Speed_Sender/: CMakeLists.txt
Speed_Sender/src/: SpeedServer.cpp  main.cpp
VirtualArduino/: CanSender.cpp  CanSender.hpp  build.sh  cansender  main.cpp
Virtual_gamepad/: CMakeLists.txt  gamepad.sh
Virtual_gamepad/src/: gamepadsystem.cpp  gamepadsystem.hpp  main.cpp
Yocto_Test_Client/: CMakeLists.txt
Yocto_Test_Server/: CMakeLists.txt
battery_sender/: CMakeLists.txt  battery_sender.ini  battery_sender.sh
battery_sender/src/: .battery.cpp.swp  BatteryServer.cpp  BatteryServer.hpp  battery.cpp  battery.h  batterysystem.cpp  batterysystem.hpp  main.cpp
battery_sender/src-gen/someip/stub/battery/v1/commonapi/: BatteryStatusSomeIPStubAdapter.cpp
battery_sender/src/piracer/: PythonManager.cpp  piracer.cpp
build-head_unit-Desktop-Debug/: CMakeCache.txt  qtcsettings.cmake
build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-head_unit-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-testqml-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  testqml
build-testqml-Desktop-Debug/testqml_autogen/: deps
build-testqml-Desktop-Debug/testqml_autogen/EWIEGA46WW/: qrc_qml.cpp
fidl/: README.md  battery.fdepl  battery.fidl  gamepad.fdepl  gamepad.fidl  gear.fdepl  gear.fidl  light.fdepl  light.fidl  moving.fdepl  moving.fidl  rpm.fdepl  rpm.fidl  speed.fdepl  speed.fidl
gamepad/: CMakeLists.txt  gamepad.ini  gamepad.sh
gamepad/src/: Gamepad.cpp  Gamepad.h  GearSelectionClient.cpp  PythonManager.h  gamepad.cpp  gamepad.h  gamepadServer.cpp  gamepadServer.hpp  gamepadsystem.cpp  gamepadsystem.hpp  main.cpp  movingStubImpl.cpp  piracer.h
gamepad/src-gen/core/common/light/v1/commonapi/: lightStatus.hpp
gamepad/src-gen/core/proxy/light/v1/commonapi/: lightStatusProxy.hpp  lightStatusProxyBase.hpp
gamepad/src-gen/someip/common/light/v1/commonapi/: lightStatusSomeIPDeployment.cpp  lightStatusSomeIPDeployment.hpp
gamepad/src-gen/someip/proxy/light/v1/commonapi/: lightStatusSomeIPProxy.cpp  lightStatusSomeIPProxy.hpp
generator/core-generator/configuration/org.eclipse.osgi/: framework.info.103  framework.info.107  framework.info.113  framework.info.40  framework.info.51  framework.info.62  framework.info.71  (+5 more)
head_unit/: CMakeLists.txt  README.md  head-unit.ini  head_unit.sh
head_unit/apps/ambient/: info.yaml
head_unit/apps/ambient/qml/: ambient.qml
head_unit/apps/head_light/: info.yaml
head_unit/apps/headlight/: info.yaml
head_unit/apps/headlight/plugin/: CMakeLists.txt  qmldir
head_unit/apps/headlight/plugin/src/: husystem.cpp
head_unit/apps/headlight/qml/: headlight.qml
head_unit/apps/music/: info.yaml
head_unit/apps/music/qml/: music.qml
head_unit/plugin/GearSelection/: CMakeLists.txt  qmldir
head_unit/plugin/GearSelection/src/: gearselection.cpp  gearselection.h  gearselection_plugin.cpp  gearselection_plugin.h
head_unit/plugin/HUSystem/: CMakeLists.txt  qmldir
head_unit/plugin/HUSystem/src/: husystem.cpp  husystem.h  husystem_plugin.cpp  husystem_plugin.h
head_unit/plugin/HeadLight/: CMakeLists.txt  qmldir
head_unit/plugin/HeadLight/src/: headlight.cpp  headlight.h  headlight_plugin.cpp  headlight_plugin.h
head_unit/plugin/Music/: CMakeLists.txt  qmldir
head_unit/plugin/Music/src/: music.cpp  music.h  music_plugin.cpp  music_plugin.h
head_unit/src/: GearClient.cpp  GearClient.hpp  GearSelectionServer.cpp  husystem.cpp  husystem.hpp  main.cpp  qml.qrc
head_unit/src-gen/someip/proxy/speed/v1/commonapi/: SpeedStatusSomeIPProxy.cpp
head_unit/src/qml/: Background.qml  Funtionality.qml  GearSelection.qml  Home.qml  Light.qml  ValueSource.qml  home.qml  light.qml  main.qml  music.qml
head_unit/system-ui/: GearSelection.qml  system-ui.qml
instrument_cluster/: CMakeLists.txt  README.md  instrument_cluster.ini  instrument_cluster.sh
instrument_cluster/src/: StatusClient.cpp  StatusClient.hpp  VehicleStatusClient.cpp  icsystem.cpp  icsystem.hpp  main.cpp  qml.qrc
instrument_cluster/src-gen/someip/proxy/battery/v1/commonapi/: BatteryStatusSomeIPProxy.cpp
instrument_cluster/src-gen/someip/proxy/gear/v1/commonapi/: GearSelectionSomeIPProxy.cpp
instrument_cluster/src-gen/someip/proxy/speed/v1/commonapi/: SpeedStatusSomeIPProxy.cpp
instrument_cluster/src/qml/: IconGaugeStyle.qml  ValueSource.qml  dashboard.qml  dashboard.qml.autosave
racer/: .racer.sh.swp  CMakeLists.txt  racer.ini  racer.sh
racer/src/: gearstubImpl.cpp  gearstubImpl.hpp  lightstubImpl.cpp  lightstubImpl.hpp  main.cpp  racer.cpp  racer.h  racerstubImpl.cpp  racerstubImpl.hpp  racersystem.cpp  racersystem.hpp
racer/src-gen/core/skel/gear/v1/commonapi/: GearStatusStubDefault.hpp
rpm_sender/: CMakeLists.txt  rpm_sender.ini  rpm_sender.sh
rpm_sender/src/: rpmsystem.cpp
shared_libarary/: CMakeLists.txt
speed_sender/: CMakeLists.txt  speed_sender.ini  speed_sender.sh
speed_sender/src/: CanReceive.cpp  CanReceive.hpp  SpeedServer.cpp  SpeedServer.hpp  canreceive.cpp  canreceive.hpp  main.cpp  speedstubImpl.cpp  speedsystem.cpp  speedsystem.hpp
speed_sender/src-gen/someip/stub/speed/v1/commonapi/: SpeedStatusSomeIPStubAdapter.cpp  SpeedStatusSomeIPStubAdapter.hpp
src-gen/: README.md
testqml/: CMakeLists.txt  home.qml  main.qml  qml.qrc
testracer/: CMakeLists.txt
testracer/src/: gamepad.cpp  gamepad.h  main.cpp  pythonmanager.cpp  pythonmanager.h  racer.cpp  racer.h
(+282 files in other folders)
